added desktop version, split global into 2 parts for better overview

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,7 @@
 @import "fonts";
 @import "base";
 @import "global";
+@import "global_mobil";
 @import "hamburger";
 @import "mainnav";
 @import "mainnav-mobile";
