--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -1,88 +1,130 @@
-*, *:after, *:before {
-  box-sizing: border-box;
-}
+@media only screen and (min-width: 600px) {
+  //--- GENERAL ---
 
- //--- GENERAL ---
- body{
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-style:normal;
-  font-weight: 300;
-}
+  ul {
+    // full list
 
-section{
-  padding-top: 50px;
-}
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    margin-right: 4vh;
+    gap: 40px;
+    margin-top: -35px;
+    size: 20px;
 
-//--- FONTS ---
-p, blockquote, h1, h2, h3, .super-headline{
-  padding-left: 15px;
-}
-
-h1{
-  padding-top: 15px;
-  color: white;
-  font-size: 14px;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-style:normal;
-  font-weight: 300;
-
-  #uppercase{
-    text-transform: uppercase;
-    font-weight: 600;
   }
-}
 
-h2{
-  color: #F4A76C;
-  font-family: 'Source Sans Pro',   sans-serif;
-  font-style:normal;
-  font-weight: 200;
-  font-size: 28px;
-}
+  li a {
+    // listitems
+    color: #FFAD6E;
+    margin: 20px 0px 20px 0px;
 
-h3{
-  color:#F4A76C;
-  padding-top: 55px;
-  margin-bottom: 15px;
-}
+    font-size: 20px;
+  }
 
-#title{
-  text-transform: uppercase;
-  font-weight: bold;
-}
 
-.super-headline{
-  color: #363636;
-  text-transform: uppercase;
-  letter-spacing: 1%;
-  font-size: 10px;
-  font-family: 'Source Sans Pro',  sans-serif;
-  font-style:normal;
-  font-weight: 300;
-}
+  .headline {
 
-main h1,
-main h2,
-main h3,
-main p {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    position: left;
+
+    br {
+      display: none;
+    }
+  }
+
+  body {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+  }
+
+  section {
+    padding-top: 50px;
+  }
+
+  //--- FONTS ---
+  p,
+  blockquote,
+  h1,
+  h2,
+  h3,
+  .super-headline {
+    padding-left: 15px;
+  }
+
+  h1 {
+    padding-top: 15px;
+    color: white;
+    font-size: 14px;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+
+    #uppercase {
+      text-transform: uppercase;
+      font-weight: 600;
+    }
+  }
+
+  h2 {
+    color: #F4A76C;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-style: normal;
+    font-weight: 200;
+    font-size: 28px;
+    position: left;
+  }
+
+  h3 {
+    color: #F4A76C;
+    padding-top: 55px;
+    margin-bottom: 15px;
+  }
+
+  #title {
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+
+  .super-headline {
+    color: #363636;
+    text-transform: uppercase;
+    letter-spacing: 1%;
+    font-size: 10px;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+  }
+
+  main h1,
+  main h2,
+  main h3,
+  main p {
     padding-left: 17px;
     padding-right: 17px;
   }
+
   .level {
     background-color: #363636;
   }
+
   .level .button-padding {
     padding-left: 17px;
   }
+
   .level h3 {
     font-size: 22px;
     font-family: "Source Sans Pro Light";
     color: #FFAD6E;
     padding-top: 0px;
   }
+
   .level p {
     padding-top: 20px;
     font-size: 16px;
@@ -91,6 +133,7 @@ main p {
     color: white;
     padding-bottom: 40px;
   }
+
   .level a {
     font-size: 16px;
     font-family: "Source Sans Pro SemiBold";
@@ -103,14 +146,17 @@ main p {
     box-shadow: none;
     text-decoration: none;
   }
+
   .level a:hover {
     background-color: #FFAD6E;
     border-width: 2px;
   }
+
   .level .svg {
     padding-top: 20px;
     max-width: 68px;
   }
+
   .level blockquote {
     font-family: "Source Sans Pro ExtraLight";
     color: white;
@@ -118,11 +164,13 @@ main p {
     padding-top: 10px;
     text-align: center;
   }
+
   .level .blockquote {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
+
   .icon {
     width: 115px;
     height: 115px;
@@ -134,10 +182,12 @@ main p {
     justify-content: center;
     z-index: 1;
   }
+
   .icon img {
     max-width: 67px;
     opacity: 75%;
   }
+
   .number {
     position: relative;
     left: 140px;
@@ -153,13 +203,15 @@ main p {
     z-index: 0;
     line-height: 37px;
   }
+
   #workshops {
     display: grid;
     height: 1999px;
     grid-template-columns: 1fr 0.1fr;
     grid-template-rows: 175px 521px 87px 521px 87px 521px 87px;
-    grid-template-areas: "text-levels text-levels" "level1 apply" "empty1 empty1" "level2 register1" "empty2 empty2" "level3 register2" "empty3 empty3";
+    grid-template-areas: "text-levels text-levels""level1 apply""empty1 empty1""level2 register1""empty2 empty2""level3 register2""empty3 empty3";
   }
+
   .apply {
     grid-area: apply;
     writing-mode: vertical-rl;
@@ -172,6 +224,7 @@ main p {
     color: #1A1A1A;
     background-color: #F7F7F7;
   }
+
   .register1 {
     grid-area: register1;
     background-color: aqua;
@@ -185,6 +238,7 @@ main p {
     color: #1A1A1A;
     background-color: #F7F7F7;
   }
+
   .register2 {
     grid-area: register2;
     background-color: aqua;
@@ -198,34 +252,44 @@ main p {
     color: #1A1A1A;
     background-color: #F7F7F7;
   }
+
   .text-levels {
     grid-area: text-levels;
     padding-top: 30px;
+
   }
+
   .text-levels .super-headline {
     font-family: "Source Sans Pro SemiBold";
     font-size: 16px;
     color: #363636;
     text-transform: uppercase;
     padding-bottom: 10px;
+
   }
+
   .text-levels h2 {
     font-family: "Source Sans Pro Light";
-    font-size: 28px;
+    font-size: 38px;
     color: #D5874C;
+
   }
+
   .level1 {
     grid-area: level1;
     background-color: #363636;
   }
+
   .level2 {
     grid-area: level2;
     background-color: #363636;
   }
+
   .level3 {
     grid-area: level3;
     background-color: #363636;
   }
+
   .iconsection {
     display: flex;
     justify-content: center;
@@ -236,20 +300,65 @@ main p {
 
   #about div {
     background-color: #FFF7F2;
-    min-height: 750px;
-    height: 80vh;
+
+    height: 40vh;
+    margin-left: 2vh;
+    display: flex;
+
+
+
   }
+
+
   #about div img {
-    margin-top: 60px;
-    width: 100%;
+    
+    
+    
+
+    display:flex;
+    flex-direction: column;
+    width: auto;
+    height: auto;
+    margin-top: 2vh;
+    min-height: 40vh; 
+
   }
+  #about .portraitdiv{
+   display:flex; 
+  }
+
+  #about .metext{
+    display:flex;
+    flex-direction: column;
+    max-width:50vh;
+
+    
+  }
+  #about {
+    display: flex;
+    flex-direction: row;
+    height: 60vh;
+  }
+
+
+
+  #about .aboutme {
+    display: flex;
+    flex-direction: column;
+    max-width: 50vh;
+
+  }
+
+
+
   #about div .super-headline {
-    margin-top: 21px;
+    margin-top: 30px;
     text-transform: uppercase;
     font-size: 16px;
     padding-left: 17px;
     font-family: "Source Sans Pro SemiBold";
   }
+
   #about div h2 {
     font-size: 28px;
     color: #D5874C;
@@ -257,11 +366,13 @@ main p {
     margin-bottom: 12px;
     font-family: "Source Sans Pro Light";
   }
+
   #about div .text {
     margin: 0 0px 30px 0px;
     font-family: "Source Sans Pro Light";
     color: #363636;
   }
+
   #about div a {
     text-decoration: none;
     color: #000000;
@@ -272,108 +383,150 @@ main p {
     font-family: "Source Sans Pro SemiBold";
     margin-left: 17px;
   }
+
+
   #about div a:hover {
     background-color: #FFAD6E;
   }
 
-//--- BUTTON ---   
-.button{
-  top: 412px;
-  left: 287px;
-  width: 145px;
-  height: 34px;
-  border: 1px solid #F4A76C;
-  opacity: 1;
-  color: white;
-  text-decoration: none;
-  text-transform: uppercase;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Source Sans Pro',   sans-serif;
-  font-style:normal;
-  font-weight: 200;
-  font-size: 12px;
-  margin: 10px;
-}
-
-//--- HEADER ---
-header{
-  background-image: url("../images/dance_two_man_desktop.jpg");
-  background-repeat: no-repeat;
-  background-size:100%;
-  display: flex;
-  flex-direction: column;
-  background-position: 50% 0;
-  height: 100vh;
-
-  h2{
-    font-size: 24px;
-    line-height: 30px;
-    margin-bottom: 15px;
-  }
-  .box{
+  //--- BUTTON ---   
+  .button {
+    top: 412px;
+    left: 287px;
+    width: 145px;
+    height: 34px;
+    border: 1px solid #F4A76C;
+    opacity: 1;
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
     display: flex;
-    width: 100%;
     justify-content: center;
-    flex-direction: column;
-    padding-top: 110px;
-    
-    align-items: end;
-    height: 100%;
-  }
-  #headline{
-    width: 220px;
-    left: 0;
-  }
-  li{
-    font-size: 16px;
-    font-family: 'Source Sans Pro',  sans-serif;
-    font-style:normal;
+    align-items: center;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-style: normal;
     font-weight: 200;
+    font-size: 12px;
+    margin: 10px;
   }
-}
 
-//--- ABOUT ME ---
-#about{
-  padding-bottom: 40px;
-  background: #FFF7F2 0% 0% no-repeat padding-box;
-  h2{
-    padding-top:5px;
-    font-size: 24px;
-    margin-bottom: 15px;
-  }
-  .button{
-    margin-top: 20px;
-    color:black;
-  }
-  img{
-    width: 100%;
-    margin-bottom: 15px;
-  }
-}
+  //--- HEADER ---
+  header {
+    background-image: url("../images/dance_two_man_desktop.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    display: flex;
+    flex-direction: column;
+    background-position: 50% 0;
+    height: 80vh;
+    padding-top: 1%;
 
-//--- NEWS ---
-#news{
-  article{
-    padding-bottom: 20px;
-    margin: 15px;
-    background-color: #F7F7F7;
-
-    .button{
-      margin-top: 20px;
-      color:black;
+    h2 {
+      font-size: 24px;
+      line-height: 30px;
+      margin-bottom: 15px;
     }
-    img{
+
+    .box {
+
+      width: 100%;
+      justify-content: left;
+
+      padding-top: 50px;
+      margin-left: 13%;
+      margin-top: 10%;
+      align-items: left;
+      width: 40vh;
+      width: 30vh;
+
+    }
+
+    .mainnav {
+      display: none;
+      visibility: hidden;
+
+      a {
+        margin-top: 3px;
+      }
+    }
+
+    #headline {
+      width: 400px;
+      left: 0;
+
+      h2 {
+        font-size: 35px;
+        margin-bottom: 4vh;
+      }
+
+    }
+
+    li {
+      font-size: 16px;
+      font-family: 'Source Sans Pro', sans-serif;
+      font-style: normal;
+      font-weight: 200;
+    }
+
+  }
+
+  //--- ABOUT ME ---
+
+  #about {
+    padding-bottom: 40px;
+    background: #FFF7F2 0% 0% no-repeat padding-box;
+
+    h2 {
+      padding-top: 5px;
+      font-size: 24px;
+      margin-bottom: 15px;
+    }
+
+    .button {
+      margin-top: 20px;
+      color: black;
+    }
+
+    img {
       width: 100%;
       margin-bottom: 15px;
     }
-    h3{
-      padding-top:10px;
+  }
+
+  //--- NEWS ---
+  #news {
+    article {
+      padding-bottom: 20px;
+      margin: 15px;
+      background-color: #F7F7F7;
+
+      .button {
+        margin-top: 20px;
+        color: black;
+      }
+
+      img {
+        width: 100%;
+        margin-bottom: 15px;
+      }
+
+      h3 {
+        padding-top: 10px;
+      }
     }
   }
+
+  #news .newssection{
+    display:flex;
+    flex-direction:row;
+     
+  }
+  #news .newscontainer{
+    display:flex;
+    flex-direction:column;
+    width: 100vh; 
+    height: 600px; 
+    
+  }
 }
-
-
-
