--- a/src/sass/layout/footer.scss
+++ b/src/sass/layout/footer.scss
@@ -2,10 +2,16 @@ footer {
     background-color: #363636;
     color: white;
     margin-bottom: 0;
-    min-height: 200px;
-    padding: 15px;
+    min-height: 30px;
+     padding: 15px;
     a{
         color: #F4A76C;
         text-decoration: none;
     }
+    display:flex;
+    flex-direction:row;
+    
+    justify-content: space-between;
+
 }
+
