--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -22,6 +22,10 @@
     font-size: 20px;
   }
 
+  #hamburger {
+    visibility: hidden;
+  }
+
 
   .headline {
 
@@ -189,7 +193,7 @@
   }
 
   .number {
-    position: relative;
+    position: left;
     left: 140px;
     font-family: "Source Sans Pro SemiBold";
     color: #D5874C;
@@ -205,24 +209,42 @@
   }
 
   #workshops {
-    display: grid;
-    height: 1999px;
-    grid-template-columns: 1fr 0.1fr;
-    grid-template-rows: 180x 521px 87px 521px 87px 521px 87px;
-    grid-template-areas: "text-levels text-levels""level1 apply""empty1 empty1""level2 register1""empty2 empty2""level3 register2""empty3 empty3";
+
+    .mastergrid {
+      display: grid;
+      grid-template-columns: 20% 20% 20% 20% 20%;
+      grid-template-rows: 33% 33% 33%;
+      grid-gap: 10px;
+
+      .number-3 {
+        grid-row: 1;
+
+      }
+
+    }
+
+    // display: grid;
+    // height: 2000px;
+    // grid-template-columns: 1fr 0.1fr;
+    // grid-template-rows: 175px 521px 87px 521px 87px 521px 87px;
+    // grid-template-areas: "text-levels text-levels"
+    //   "level1 apply""empty1 empty1""level2 register1""empty2 empty2""level3 register2""empty3 empty3";
   }
 
   .apply {
     grid-area: apply;
-    writing-mode: vertical-rl;
+    //writing-mode: vertical-rl;
     text-orientation: mixed;
-    transform: rotate(180deg);
+    //transform: rotate(180deg);
     display: flex;
     justify-content: center;
     font-family: "Source Sans Pro ExtraLight";
     font-size: 18px;
     color: #1A1A1A;
     background-color: #F7F7F7;
+    width: 25vh;
+    margin: 0vh 1vh 0vh 1vh;
+    height: 40vh;
   }
 
   .register1 {
@@ -276,18 +298,27 @@
   }
 
   .level1 {
+
+    display: flex;
+    flex-direction: row;
+
+    height: 25vh;
     grid-area: level1;
     background-color: #363636;
+    margin-left: 5vh;
+    margin-right: 1vh;
   }
 
   .level2 {
     grid-area: level2;
     background-color: #363636;
+
   }
 
   .level3 {
     grid-area: level3;
     background-color: #363636;
+
   }
 
   .iconsection {
@@ -297,6 +328,13 @@
     bottom: 50px;
   }
 
+  #about {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+  }
 
   #about div {
     background-color: #FFF7F2;
@@ -304,6 +342,8 @@
     height: 40vh;
     margin-left: 2vh;
     display: flex;
+    //align-items: center;
+    justify-content: center;
 
 
 
@@ -311,29 +351,31 @@
 
 
   #about div img {
-    
-    
-    
 
-    display:flex;
+
+
+
+    display: flex;
     flex-direction: column;
     width: auto;
     height: auto;
     margin-top: 2vh;
-    min-height: 40vh; 
+    min-height: 40vh;
 
   }
-  #about .portraitdiv{
-   display:flex; 
+
+  #about .portraitdiv {
+    display: flex;
   }
 
-  #about .metext{
-    display:flex;
+  #about .metext {
+    display: flex;
     flex-direction: column;
-    max-width:50vh;
+    max-width: 50vh;
 
-    
+
   }
+
   #about {
     display: flex;
     flex-direction: row;
@@ -517,16 +559,21 @@
     }
   }
 
-  #news .newssection{
-    display:flex;
-    flex-direction:row;
-     
+  #news .newssection {
+    display: flex;
+    flex-direction: row;
+
   }
-  #news .newscontainer{
-    display:flex;
-    flex-direction:column;
-    width: 100vh; 
-    height: 600px; 
-    
+
+  #news .newscontainer {
+    display: flex;
+    flex-direction: column;
+    width: 100vh;
+    height: 600px;
+
+    img {
+      height: 250px;
+    }
+
   }
 }
