recht fertiger Aaron

--- a/src/sass/hamburger.scss
+++ b/src/sass/hamburger.scss
@@ -1,3 +1,9 @@
+@include breakpoint($desktop){
+    #hamburger {
+        visibility: hidden;
+      }
+}
+
 @include breakpoint(0, $mobile) {   
     #hamburger {
         width: 24px;
