--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,9 +3,15 @@
 @import "fonts";
 @import "base";
 @import "global";
-@import "global_mobil";
 @import "hamburger";
 @import "mainnav";
 @import "mainnav-mobile";
+@import "layout/header";
+@import "layout/workshop";
+@import "layout/about";
+@import "layout/news";
 @import "layout/footer";
+
+
+
 
