größere Schrift Hamburger

--- a/src/sass/mainnav-mobile.scss
+++ b/src/sass/mainnav-mobile.scss
@@ -29,6 +29,7 @@
             li{
                 text-align: right;
                 margin-top: 24px;
+                font-size: 20px;
             }
 
             a{
