--- a/src/sass/layout/about.scss
+++ b/src/sass/layout/about.scss
@@ -3,29 +3,31 @@
     #about {
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
+        justify-content: center;
         width: 100%;
         background-color: #FFF7F2;
         padding-top: 15vh;
-        padding-bottom: 20vh;
+        padding-bottom: 15vh;
 
-        .portraitdiv{
-            display: flex;
-            align-items:flex-start;
-            justify-content: center;
-            width: 45%;
-            height: 100%;
+        // .portraitdiv{
+        //     display: flex;
+        //     align-items: flex-start;
+        //     justify-content: center;
+        //     width: 45%;
+        //     height: 100%;
+            // object-fit: cover;
 
             img{
-                display: flex;               
-                width: 100%;
-
+                object-fit: cover;             
+                width: 45%;
             }
-        }
+        // }
         .metext {
             display: flex;
             flex-direction: column;
             width: 45%;
+            padding-left: 3vh;
+            padding-bottom: 3vh;
 
             p{
                 margin-top: 3vh;
@@ -33,6 +35,7 @@
                 justify-content: center;
                 width: 70%;
                 line-height: 1.6rem;
+                padding-left: 0;
             }
             a {
                 display: flex;
@@ -44,13 +47,16 @@
                 font-style: normal;
                 font-weight: 600;
                 font-size: 16px;
-                margin-left: 15px;
+                // margin-left: 15px;
                 margin-top: 4vh;
                 text-decoration: none;   
                 text-transform: uppercase;
                 color: black;
                 border: 1px solid #FFAD6E;;
                 padding: 0;
+            }
+            h2{
+                padding-left: 0;
             }
         }    
       }
